--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="row">
 
         <div class="col">
-            <img src="img/_d1939d91-cde6-4e56-bea7-c27e73ae90f9-removebg-preview.png" class="img_wom">
+            <img src="./img/_d1939d91-cde6-4e56-bea7-c27e73ae90f9-removebg-preview.png" class="img_wom">
         </div>
 
         <div class="col">
