--- a/index.html
+++ b/index.html
@@ -35,21 +35,26 @@
 
     </div>
     <div class="row">
-
-        <div class="col">
+        <div class="col-12 col-md-6">
             <img src="./img/img.png" class="img_wom">
         </div>
 
-        <div class="col">
+        <div class="col-12 col-md-6">
             <h2> ¿Que soy?</h2>
             <p>Soy una aplicación web cuya funcion es la de facilitar al personal DATID
                 una manera de llevar un conotrol mas acertado de los activos con los que cuenta,
-            ademas de brindar apoyo a las revisiones periodicas que se realizan en esta division academica.</p>
+                ademas de brindar apoyo a las revisiones periodicas que se realizan en esta division academica.</p>
             <button ID="MYBTN" type="button" class="btn btn-outline-primary me-2"><h2 class="btn">Iniciar Sesion</h2></button>
         </div>
     </div>
 
+
 </div>
+<script>
+    window.alert("ATENCION!! Este es un sitio web Para personal DATID, si es ajeno a, " +
+        "le pedimos que continue con su navegacion en otro sitio");
+</script>
+
 </body>
 <footer>
     <img class="img_utez" src="img/images-removebg-preview%20(1).png">
